--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,35 @@
+h1 {
+    background-color: aquamarine;
+    font-size: 2.5rem;
+}
+
+img {
+    width: 100%;
+    height: 200px;
+}
+
 .bookCreate-Button {
     /* background-color: rgb(80, 36, 124); */
+}
+
+.bookList {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.bookEach {
+    /* width: 30%; */
+    margin: 10px auto;
+    /* border: 1px solid red; */
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+
+.deleteBtn,
+.editBtn {
+    margin: 10px;
+    font-size: 1.2rem;
 }
