--- a/src/main.css
+++ b/src/main.css
@@ -1,35 +1,59 @@
 h1 {
-    background-color: aquamarine;
     font-size: 2.5rem;
+    margin: 0;
 }
 
 img {
     width: 100%;
-    height: 200px;
 }
 
-.bookCreate-Button {
-    /* background-color: rgb(80, 36, 124); */
+.bookCreate {
+    text-align: center;
 }
 
 .bookList {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
 }
 
 .bookEach {
-    /* width: 30%; */
-    margin: 10px auto;
-    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
 }
 
-
 .deleteBtn,
 .editBtn {
     margin: 10px;
     font-size: 1.2rem;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+
+.saveBtn {
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.bookEdit {
+    margin-top: 10px;
+}
+
+.createForm {
+    margin: 10px;
+}
+
+.createForm-bookName,
+.createForm-button {
+    font-size: 2rem;
+}
+
+.editForm {
+    display: flex;
+    margin: auto 0;
 }
