--- a/src/main.css
+++ b/src/main.css
@@ -3,28 +3,32 @@ h1 {
     margin: 0;
 }
 
-img {
-    width: 100%;
+.app {
+    width: 50%;
+    margin: 0 auto;
 }
 
-.bookCreate {
-    text-align: center;
+.icon {
+    width: 30px;
 }
 
 .bookList {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    display: flex;
+    flex-direction: column;
     gap: 20px;
+    /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
 }
 
 .bookEach {
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
+    /* flex-direction: column; */
     align-items: center;
     margin: 10px;
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
+    flex-wrap: wrap;
 }
 
 .deleteBtn,
@@ -44,11 +48,15 @@ img {
     margin-top: 10px;
 }
 
-.createForm {
+.createForm-div {
     margin: 10px;
 }
 
-.createForm-bookName,
+.createForm {
+    text-align: center;
+}
+
+/* .createForm-bookName, */
 .createForm-button {
     font-size: 2rem;
 }
@@ -56,4 +64,26 @@ img {
 .editForm {
     display: flex;
     margin: auto 0;
+}
+
+.expenseDetails-heading {
+    text-align: center;
+}
+
+.addExpense-div {
+    text-align: center;
+}
+
+.addExpense-button {
+    font-size: 2rem;
+}
+
+.expenseDetails-div {
+    text-align: center;
+}
+
+.expenseDetails-both {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
