--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,14 @@ h1 {
     margin: 0;
 }
 
+input[type="text"]::placeholder {
+    text-align: center;
+}
+
+input[type="number"]::placeholder {
+    text-align: center;
+}
+
 .app {
     width: 50%;
     margin: 0 auto;
@@ -58,7 +66,7 @@ h1 {
 
 /* .createForm-bookName, */
 .createForm-button {
-    font-size: 2rem;
+    /* font-size: 2rem; */
 }
 
 .editForm {
@@ -70,7 +78,7 @@ h1 {
     text-align: center;
 }
 
-.addExpense-div {
+.addItem-button-div {
     text-align: center;
 }
 
@@ -86,4 +94,29 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+
+.addItem {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.incomeCreate,
+.expenseCreate {
+    /* display: flex;
+    flex-direction: column; */
+}
+
+.addItem-button,
+.incomeCreate-Button,
+.expenseCreate-Button {
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    flex: 1;
+    font-size: 2rem;
 }
