--- a/src/main.css
+++ b/src/main.css
@@ -28,9 +28,6 @@ input[type="number"]::placeholder {
 }
 
 .bookEach {
-    display: flex;
-    justify-content: space-evenly;
-    /* flex-direction: column; */
     align-items: center;
     margin: 10px;
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
@@ -38,6 +35,40 @@ input[type="number"]::placeholder {
     padding: 10px;
     flex-wrap: wrap;
 }
+
+.duplicateItem {
+    align-items: center;
+    margin: 10px;
+    /* border: 1px solid red; */
+    border-radius: 10px;
+    padding: 10px;
+    flex-wrap: wrap;
+}
+
+.duplicateItem-ParentDiv {
+    border: 2px solid red;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.bookEach-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bookEach-content,
+.bookEach-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
 
 .deleteBtn,
 .editBtn {
@@ -82,6 +113,17 @@ input[type="number"]::placeholder {
     text-align: center;
 }
 
+.addItem-button {
+    /* display: flex; */
+    /* flex: 1; */
+    font-size: 5rem;
+    background-color: black;
+    color: white;
+    width: 90px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 .addExpense-button {
     font-size: 2rem;
 }
@@ -108,7 +150,7 @@ input[type="number"]::placeholder {
     flex-direction: column; */
 }
 
-.addItem-button,
+
 .incomeCreate-Button,
 .expenseCreate-Button {
     background-color: black;
