--- a/src/main.css
+++ b/src/main.css
@@ -27,13 +27,19 @@ input[type="number"]::placeholder {
     /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
 }
 
-.bookEach {
+.expenseEachNew {
     align-items: center;
     margin: 10px;
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
     flex-wrap: wrap;
+}
+
+.expenseEachRepeatingHeader {
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 10px
 }
 
 .duplicateItem {
@@ -43,12 +49,6 @@ input[type="number"]::placeholder {
     border-radius: 10px;
     padding: 10px;
     flex-wrap: wrap;
-}
-
-.duplicateItem-ParentDiv {
-    border: 2px solid red;
-    border-radius: 10px;
-    padding: 10px;
 }
 
 .bookEach-header {
@@ -101,6 +101,7 @@ input[type="number"]::placeholder {
 }
 
 .editForm {
+    justify-content: center;
     display: flex;
     margin: auto 0;
 }
@@ -116,12 +117,13 @@ input[type="number"]::placeholder {
 .addItem-button {
     /* display: flex; */
     /* flex: 1; */
-    font-size: 5rem;
+    font-size: 2rem;
     background-color: black;
     color: white;
-    width: 90px;
     cursor: pointer;
-    border-radius: 50%;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
 }
 
 .addExpense-button {
