--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,17 @@ input[type="number"]::placeholder {
     text-align: center;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 .app {
     width: 50%;
     margin: 0 auto;
