--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,9 @@
-h1 {
-    font-size: 2.5rem;
-    margin: 0;
-}
-
-input[type="text"]::placeholder {
-    text-align: center;
-}
-
-input[type="number"]::placeholder {
-    text-align: center;
+body {
+    /* background: rgb(170, 168, 168); */
+    background-color: snow;
+    box-sizing: border-box;
+    padding: 0;
+    border-radius: 10px;
 }
 
 input::-webkit-outer-spin-button,
@@ -22,14 +17,130 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
+h1 {
+    font-size: 2.5rem;
+    margin: 0;
+}
+
+input {
+    border-radius: 5px;
+    border: none;
+    outline: 1px solid black;
+    text-align: center;
+}
+
+select {
+    text-align: center;
+    border-radius: 5px;
+    border: none;
+    outline: 1px solid black;
+}
+
+input[type="text"],
+input[type="number"] {
+    min-width: 100px;
+}
+
+/* input[type="number"]::placeholder {
+    text-align: center;
+}
+
+input[type="date"] {
+    text-align: center;
+} */
+
 .app {
-    width: 50%;
+    max-width: 800px;
     margin: 0 auto;
+}
+
+.app-content {
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
 }
 
 .icon {
     width: 30px;
 }
+
+
+/* Add Expense and Income Section */
+
+.addItem {
+    /* display: flex;
+    justify-content: center;
+    gap: 20px; */
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.addItem-button-div {
+    text-align: center;
+}
+
+.addItem-button {
+    font-size: 3rem;
+    font-weight: bolder;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 2px 30px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.addItem-incomeCreate-div,
+.addItem-expenseCreate-div {
+    width: 100%;
+}
+
+.addItem-incomeCreate-button,
+.addItem-expenseCreate-button {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    font-size: 2rem;
+    font-weight: bolder;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+/* Add Expense and Income Section */
+
+/* Form */
+
+.createForm-div {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.editForm {
+    justify-content: center;
+    display: flex;
+    margin: auto 0;
+}
+
+form>div {
+    display: flex;
+    margin: 5px;
+}
+
+form>div>input,
+form>div>button,
+form>div>select {
+    flex: 1;
+}
+
+/* Form */
 
 .bookList {
     display: flex;
@@ -38,9 +149,17 @@ input[type=number] {
     /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
 }
 
+.singleExpense,
+.multipleExpense {
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
 .expenseEachNew {
     align-items: center;
-    margin: 10px;
+    margin: 20px;
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
@@ -50,23 +169,15 @@ input[type=number] {
 .expenseEachRepeatingHeader {
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    padding: 10px
+    padding: 10px;
+    margin: 20px;
 }
 
-.repeatingValue {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-}
 
 .expenseEachRepeating {
     margin: 10px;
     border-radius: 10px;
     padding: 10px;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    /* flex-wrap: wrap; */
 }
 
 .expenseEachRepeating-details {
@@ -78,7 +189,31 @@ input[type=number] {
 .expenseEachRepeating-content {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.expenseEachRepeating-button-div {
+    display: flex;
+}
+
+.expenseEachRepeating-deleteBtn,
+.expenseEachRepeating-editBtn {
+    /* font-size: 1.2rem; */
+    margin: 2px;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+
+.repeatingValue {
+    display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
+}
+
+.repeatingValue-child {
+    display: flex;
+    gap: 5px;
 }
 
 .bookEach-header {
@@ -114,14 +249,6 @@ input[type=number] {
 }
 
 
-.deleteBtn,
-.editBtn {
-    /* margin: 10px; */
-    font-size: 1.2rem;
-    border-radius: 5px;
-    border: 1px solid black;
-}
-
 .saveBtn {
     border: 1px solid black;
     border-radius: 5px;
@@ -131,48 +258,18 @@ input[type=number] {
     margin-top: 10px;
 }
 
-.createForm-div {
+/* 
+.expenseDetails-div {
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.295);
+    padding: 10px;
     margin: 10px;
-}
-
-.createForm {
-    text-align: center;
-}
-
-/* .createForm-bookName, */
-.createForm-button {
-    /* font-size: 2rem; */
-}
-
-.editForm {
-    justify-content: center;
-    display: flex;
-    margin: auto 0;
-}
+    border-radius: 10px;
+} */
 
 .expenseDetails-heading {
     text-align: center;
 }
 
-.addItem-button-div {
-    text-align: center;
-}
-
-.addItem-button {
-    /* display: flex; */
-    /* flex: 1; */
-    font-size: 2rem;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-}
-
-.addExpense-button {
-    font-size: 2rem;
-}
 
 .expenseDetails-div {
     text-align: center;
@@ -182,29 +279,4 @@ input[type=number] {
     display: flex;
     justify-content: center;
     gap: 20px;
-}
-
-.addItem {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.incomeCreate,
-.expenseCreate {
-    /* display: flex;
-    flex-direction: column; */
-}
-
-
-.incomeCreate-Button,
-.expenseCreate-Button {
-    background-color: black;
-    color: white;
-    border-radius: 10px;
-    padding: 10px;
-    cursor: pointer;
-    display: flex;
-    flex: 1;
-    font-size: 2rem;
 }
