Minimize functionality for expense and style changes

--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,14 @@
+:root {
+    --button-background: #1d1d1d;
+}
+
 body {
     background-color: snow;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    margin-bottom: 10px;
     border-radius: 10px;
-
-}
-
-input,
-select {
-    font-size: 1.2rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -23,42 +22,46 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
+.app {
+    position: relative;
+}
+
 h1 {
     font-size: 2.5rem;
     margin: 0;
 }
 
 input {
+    min-width: 100px;
+    font-size: 1.2rem;
     border-radius: 5px;
     border: none;
-    outline: 1px solid black;
+    outline: 1px solid var(--button-background);
     text-align: center;
+}
+
+input::-webkit-calendar-picker-indicator {
+    cursor: pointer;
 }
 
 select {
+    font-size: 1.2rem;
     text-align: center;
     border-radius: 5px;
     border: none;
-    outline: 1px solid black;
-}
-
-input[type="text"],
-input[type="number"] {
+    outline: 1px solid var(--button-background);
     min-width: 100px;
+    cursor: pointer;
 }
 
-/* input[type="number"]::placeholder {
-    text-align: center;
+
+option {
+    color: rgb(21, 224, 157);
 }
 
-input[type="date"] {
-    text-align: center;
-} */
-/* 
-.app {
-    max-width: 800px;
-    margin: 0 auto;
-} */
+select.categories option:hover {
+    box-shadow: 0 0 10px 100px #1882A8 inset;
+}
 
 .app-content {
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.3);
@@ -74,20 +77,7 @@ input[type="date"] {
 }
 
 
-/* Add Expense and Income Section */
-
-.addItem {
-    text-align: center;
-    /* display: flex;
-    justify-content: center;
-    gap: 20px; */
-    /* display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
-}
-
 /* Modal  */
-
 .modal {
     width: 100vw;
     height: 100vh;
@@ -98,21 +88,23 @@ input[type="date"] {
     align-items: center;
 }
 
-.modalContent {
-    max-width: 700px;
-    height: 280px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-}
-
 .modalOuter {
     margin: 10px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: snow;
+    box-shadow: rgba(0, 0, 0, 0.541) 0px 5px 15px;
+    /* background-color: rgb(240, 240, 240); */
+    background-color: rgba(255, 255, 255, 0.027);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.modalContent {
+    max-width: 600px;
+    height: 290px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+
 }
 
 .modalOuter-btn {
@@ -120,27 +112,32 @@ input[type="date"] {
     margin-bottom: 10px;
     font-size: 2rem;
     font-weight: bolder;
-    background-color: black;
-    color: snow;
+    background-color: var(--button-background);
+    color: rgb(21, 224, 157);
     border-radius: 10px;
-    /* padding: 10px; */
     cursor: pointer;
 }
 
 /* Modal  */
 
-.addItem-button-div {}
+/* Add Expense and Income Section */
+.addItem {
+    text-align: center;
+    /* position: sticky;
+    top: 80%; */
+}
 
 .addItem-button {
-    /* all: unset; */
+    all: unset;
     cursor: pointer;
     font-size: 3rem;
     font-weight: bolder;
-    background-color: black;
-    color: white;
-    padding: 2px 30px;
+    background-color: var(--button-background);
+    color: rgb(21, 224, 157);
+    /* padding: 2px 30px; */
+    padding: 10px;
     margin: 10px;
-    border-radius: 10px;
+    border-radius: 50%;
 }
 
 .addItem-button>img {
@@ -161,8 +158,8 @@ input[type="date"] {
     flex: 1;
     font-size: 2rem;
     font-weight: bolder;
-    background-color: black;
-    color: white;
+    background-color: var(--button-background);
+    color: rgb(21, 224, 157);
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
@@ -170,25 +167,23 @@ input[type="date"] {
 
 /* Add Expense and Income Section */
 
-/* Form */
-
+/* Add Expense and Income Section Form */
 .createForm-div {
     margin: 10px;
     display: flex;
     flex-direction: column;
     padding: 10px;
     border-radius: 10px;
+    background-color: snow;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 10px;
 }
 
 .createForm-button {
     font-size: 1.2rem;
-}
-
-.editForm {
-    justify-content: center;
-    display: flex;
-    margin: auto 0;
+    background-color: var(--button-background);
+    color: rgb(21, 224, 157);
+    border-radius: 10px;
+    /* padding: 5px; */
 }
 
 form>div {
@@ -202,13 +197,12 @@ form>div>select {
     flex: 1;
 }
 
-/* Form */
+/* Add Expense and Income Section Form */
 
 .bookList {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
 }
 
 .singleExpense,
@@ -219,6 +213,22 @@ form>div>select {
     border-radius: 10px;
 }
 
+/* minimize expenses  */
+.singleExpense-title,
+.multipleExpense-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.singleExpense-title-icon,
+.multipleExpense-title-icon {
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+}
+
+/* minimize expenses  */
 
 .expenseEachRepeatingHeader {
     box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
@@ -248,7 +258,7 @@ form>div>select {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .expenseEachRepeating-button-div {
@@ -288,6 +298,7 @@ form>div>select {
     flex-wrap: wrap;
 }
 
+
 .expenseSingle-header {
     display: flex;
     justify-content: space-between;
@@ -301,7 +312,7 @@ form>div>select {
 .expenseSingle-button-div {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -325,27 +336,32 @@ form>div>select {
 }
 
 
-.saveBtn {
-    border: 1px solid black;
-    border-radius: 5px;
-}
-
-.bookEdit {
+.expenseEdit {
     margin-top: 10px;
 }
 
-/* 
-.expenseDetails-div {
-    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.295);
-    padding: 10px;
-    margin: 10px;
+.editForm {
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin: auto 0;
+}
+
+.editForm-saveBtn {
+    border: 1px solid var(--button-background);
     border-radius: 10px;
-} */
+    font-size: 1.2rem;
+    background-color: var(--button-background);
+    color: rgb(21, 224, 157);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 
 .expenseDetails-heading {
     text-align: center;
 }
-
 
 .expenseDetails-div {
     text-align: center;
@@ -357,7 +373,7 @@ form>div>select {
     gap: 20px;
 }
 
-.modalBackground {
+/* .modalBackground {
     width: 100vw;
     height: 100vh;
     background-color: rgba(200, 200, 200);
@@ -376,4 +392,4 @@ form>div>select {
     display: flex;
     flex-direction: column;
     padding: 25px;
-}
+} */
